View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025649 | Open CASCADE | OCCT:Modeling Data | public | 2014-12-23 09:45 | 2016-12-09 16:39 |
Reporter | Assigned To | bugmaster | |||
Priority | high | Severity | block | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0025649: crvtpoints command return wrong deflection in output. | ||||
Description | This bug was founded in scope of CR25489. Wrong deflection computation caused by two facts: 1) Usage of ExtremaCC, which compute only minimum, but we need to get maximum. 2) Solving two-dimensional task, on which term "maximum", not well-defined. It is necessary to change deflection computation as follows: Solve one-dimensional optimization task, with the same parameter on first and second curves. Search maximum 3d distance. This approach is not good. See note 50478 by IFV | ||||
Steps To Reproduce | Same for CR25489. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR25649 has been created by aml. SHA-1: 20131be9f099a9f448de09af4b8cf88080dbcfe3 Detailed log of new commits: Author: aml Date: Tue Dec 23 10:21:23 2014 +0300 0025649: crvtpoints command return wrong deflection in output. Deflection computation algorithm changed to PSO+NewtonMinimum. |
|
Dear abv, Please check current state of branch CR25649. |
|
Branch CR25649 has been updated forcibly by aml. SHA-1: d7b2608a9bdaa07bed6f942746693d66ed87e3c4 |
|
In function ComputeDeviation, please, move sqrt out of the cycle. Call it one time just before return. |
|
Branch CR25649 has been updated forcibly by aml. SHA-1: 91ac92b59bee685e1960adb207edd2adef73bb17 |
|
Dear msv, Square root moved to improve performance, please check updated branch CR25649. |
|
OK. |
|
Dear BugMaster, Branch CR25649 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 91ac92b59bee685e1960adb207edd2adef73bb17 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: http://occt-tests.nnov.opencascade.com/CR25649-master-occt/Debian60-64/bugs/moddata_3/bug25207.html http://occt-tests.nnov.opencascade.com/CR25649-master-occt/Windows-32-VC10/bugs/moddata_3/bug25207.html bugs moddata_3(013) bug25207: FAILED Testing cases: Testing on Linux: occt component : Total MEMORY difference: 367677188 / 367852280 Total CPU difference: 51144.39000000015 / 51427.550000000156 products component : Total MEMORY difference: 112592316 / 112513828 Total CPU difference: 16439.88999999997 / 16879.77999999998 Testing on Windows: occt component : Total MEMORY difference: 277633612 / 277262960 Total CPU difference: 38371.75 / 37455.2498257 products component : Total MEMORY difference: 72380008 / 71382268 Total CPU difference: 12073.90625 / 10342.656534399997 There are no differences in images found by testdiff. |
|
Dear mkv, "moddata_3(013) bug25207" is correct, please update this testcase to new behavior. |
|
Branch CR25649 has been updated by mkv. SHA-1: 974f71031e2dd675637c57d9c6dc2cae6b1c33c2 Detailed log of new commits: Author: mkv Date: Thu Jan 15 14:38:01 2015 +0300 Correction of test case |
|
Branch CR25649 is TESTED. |
|
Branch CR25649 has been deleted by inv. SHA-1: 974f71031e2dd675637c57d9c6dc2cae6b1c33c2 |
|
crvtpoints command still returns wrong deflection in output. One of basic assumptions used for algorithm : " ...with the same parameter on first and second curves" causes to wrong calculation of maximal deflection between curve and its chord between two consecutive points, because vector (POnCurve-POnChord) calculated for the same parameter is not perpendicular to chord. Since maximal deflection is used in test, algorithm of deflection calculation: F = -myCurve->Value(X(1)).SquareDistance(myPnts->Value(X(1))); must be corrected |
|
This issue must be closed, because problem has been fixed in issue #27108 |
|
I agree. Dear bugmaster, please close this bug. No test case is needed. |
occt: master edbf88ba 2015-01-15 12:37:10
Committer: bugmaster Details Diff |
0025649: crvtpoints command return wrong deflection in output. Deflection computation algorithm changed to PSO+NewtonMinimum. Correction of test case |
Affected Issues 0025649 |
|
mod - src/GeometryTest/GeometryTest_CurveCommands.cxx | Diff File | ||
mod - tests/bugs/moddata_3/bug25207 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-12-23 09:45 |
|
New Issue | |
2014-12-23 09:45 |
|
Assigned To | => aml |
2014-12-23 10:23 | git | Note Added: 0035585 | |
2014-12-23 10:25 |
|
Note Added: 0035586 | |
2014-12-23 10:25 |
|
Assigned To | aml => abv |
2014-12-23 10:25 |
|
Status | new => resolved |
2014-12-23 11:52 |
|
Assigned To | abv => msv |
2014-12-23 16:21 | git | Note Added: 0035608 | |
2014-12-23 16:31 |
|
Note Added: 0035611 | |
2014-12-23 16:31 |
|
Assigned To | msv => aml |
2014-12-23 16:31 |
|
Status | resolved => assigned |
2014-12-24 07:36 | git | Note Added: 0035639 | |
2014-12-24 07:40 |
|
Note Added: 0035640 | |
2014-12-24 07:40 |
|
Assigned To | aml => msv |
2014-12-24 07:40 |
|
Status | assigned => resolved |
2014-12-24 09:40 |
|
Note Added: 0035646 | |
2014-12-24 09:40 |
|
Assigned To | msv => bugmaster |
2014-12-24 09:40 |
|
Status | resolved => reviewed |
2014-12-24 11:19 |
|
Assigned To | bugmaster => mkv |
2014-12-25 14:48 |
|
Note Added: 0035716 | |
2014-12-25 14:48 |
|
Assigned To | mkv => aml |
2014-12-25 14:48 |
|
Status | reviewed => assigned |
2014-12-26 07:39 |
|
Note Added: 0035741 | |
2014-12-26 07:39 |
|
Assigned To | aml => mkv |
2014-12-26 07:39 |
|
Status | assigned => feedback |
2015-01-15 14:38 | git | Note Added: 0036105 | |
2015-01-15 14:39 |
|
Note Added: 0036106 | |
2015-01-15 14:39 |
|
Assigned To | mkv => bugmaster |
2015-01-15 14:39 |
|
Status | feedback => tested |
2015-01-15 14:40 |
|
Test case number | => Not needed |
2015-01-16 13:37 | bugmaster | Changeset attached | => occt master edbf88ba |
2015-01-16 13:37 | bugmaster | Status | tested => verified |
2015-01-16 13:37 | bugmaster | Resolution | open => fixed |
2015-01-26 12:32 | git | Note Added: 0036521 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:33 |
|
Fixed in Version | => 6.9.0 |
2016-02-08 14:56 |
|
Assigned To | bugmaster => aml |
2016-02-08 14:56 |
|
Note Added: 0050478 | |
2016-02-08 14:56 |
|
Status | closed => feedback |
2016-02-08 14:56 |
|
Resolution | fixed => reopened |
2016-02-18 12:05 |
|
Assigned To | aml => msv |
2016-02-18 12:05 |
|
Status | feedback => assigned |
2016-02-18 12:08 |
|
Priority | normal => high |
2016-02-18 12:08 |
|
Severity | minor => block |
2016-02-18 12:11 |
|
Description Updated | |
2016-02-18 12:51 |
|
Assigned To | msv => ifv |
2016-02-18 12:51 |
|
Target Version | 6.9.0 => 7.1.0 |
2016-10-25 15:51 |
|
Target Version | 7.1.0 => 7.2.0 |
2016-11-23 11:41 |
|
Note Added: 0060716 | |
2016-11-23 11:41 |
|
Assigned To | ifv => msv |
2016-11-23 11:41 |
|
Status | assigned => resolved |
2016-11-23 15:47 |
|
Note Added: 0060732 | |
2016-11-23 15:47 |
|
Assigned To | msv => bugmaster |
2016-11-23 15:47 |
|
Status | resolved => feedback |
2016-11-23 18:45 |
|
Fixed in Version | 6.9.0 => |
2016-11-23 18:45 |
|
Target Version | 7.2.0 => 7.1.0 |
2016-11-23 18:49 | apn | Status | feedback => tested |
2016-11-23 18:49 | apn | Resolution | reopened => fixed |
2016-11-23 18:49 | apn | Status | tested => verified |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:39 |
|
Fixed in Version | => 7.1.0 |